--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "two.js": "0.8.2",
+    "@types/d3": "^7.4.0",
+    "@types/d3-zoom": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "d3": "^7.8.5",
+    "d3-tile": "^1.0.0",
+    "d3-zoom": "^3.0.0"
   }
 }
